@@ -1,5 +1,7 @@
 2005-09-24  Derek Price  <derek@ximbiot.com>
 
+	* socket-client.c (socket_buffer_input): Avoid overflow problems.
+
 	* socket-client.c: General cleanup.
 
 2005-09-23  Larry Jones  <lawrence.jones@ugs.com>
